<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_battery">Battery:</string>
    <string name="label_state">State:</string>
    <string name="label_power">PowerMode:</string>
    <string name="label_distance">Distance:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="buzzer">Buzzer</string>
    <string name="light">Light</string>
    <string name="label_low">Low</string>
    <string name="label_high">High</string>
    <string name="label_close">Close</string>
    <string name="label_far">Far</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="new_list_title">Create New List</string>
    <string name="new_list_name">New List Name</string>
    <string name="enter_new_list">Finish</string>
    <string name="add_new_items">Add Items</string>
    <string name="instructions">Please enter the name of this item.</string>
    <string name="accept">Enter</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="create_instructions">Select the tags you would like to add and click save when done.</string>
    <string name="tag_instructions">Changes are saved automatically.</string>

</resources>